Add images for each recipe

--- a/recipes/easy-bacon-and-cheese-quiche.html
+++ b/recipes/easy-bacon-and-cheese-quiche.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Easy Bacon and Cheese Quiche</h1>
+    <img
+      src="/images/easy-bacon-and-cheese-quiche.jpeg"
+      alt="Picture of a slice of classic quiche lorraine"
+    />
     <h2>Description</h2>
     <p>
       This is an easy, delicious quiche that takes no time to prepare using a
