--- a/recipes/my-hop-pancakes.html
+++ b/recipes/my-hop-pancakes.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>My Hop Pancakes</h1>
+    <img
+      src="/images/easy-bacon-and-cheese-quiche.jpeg"
+      alt="Picture of fluffy pancakes."
+    />
     <h2>Description</h2>
     <p>
       If you're like me, you probably grew up eating pancakes from a very famous
