--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -7,7 +7,11 @@
     <title>Waffles</title>
   </head>
   <body>
-    <h1>Waffles</h1>
+    <h1>Waffles!</h1>
+    <img
+      src="/images/Waffles.jpeg"
+      alt="Picture of crispy belgian style waffles"
+    />
     <h2>Description</h2>
     <p>
       This waffle recipe is the only one you'll need to make homemade waffles
