--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Waffles!</h1>
     <img
-      src="/images/Waffles.jpeg"
+      src="images/Waffles.jpeg"
       alt="Picture of crispy belgian style waffles"
     />
     <h2>Description</h2>
