--- a/recipes/easy-bacon-and-cheese-quiche.html
+++ b/recipes/easy-bacon-and-cheese-quiche.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Easy Bacon and Cheese Quiche</h1>
     <img
-      src="images/easy-bacon-and-cheese-quiche.jpeg"
+      src="../images/easy-bacon-and-cheese-quiche.jpeg"
       alt="Picture of a slice of classic quiche lorraine"
     />
     <h2>Description</h2>
