--- a/recipes/my-hop-pancakes.html
+++ b/recipes/my-hop-pancakes.html
@@ -9,7 +9,7 @@
   <body>
     <h1>My Hop Pancakes</h1>
     <img
-      src="images/easy-bacon-and-cheese-quiche.jpeg"
+      src="../images/My-Hop-Pancakes.jpeg"
       alt="Picture of fluffy pancakes."
     />
     <h2>Description</h2>
