--- a/recipes/my-hop-pancakes.html
+++ b/recipes/my-hop-pancakes.html
@@ -10,7 +10,7 @@
     <h1>My Hop Pancakes</h1>
     <img
       src="../images/My-Hop-Pancakes.jpeg"
-      alt="Picture of fluffy pancakes."
+      alt="Picture of fluffy pancakes"
     />
     <h2>Description</h2>
     <p>
