Replace original my-hop-pancakes page

--- a/recipes/my-hop-pancakes.html
+++ b/recipes/my-hop-pancakes.html
@@ -50,7 +50,10 @@
         appear on the surface, about 2 minutes.
       </li>
       <li>Flip with spatula and brown the other side, about 2 more minutes.</li>
-      <li>Enjoy with maple syrup, butter, or your topping of choice!</li>
+      <li>
+        Enjoy with maple syrup, butter, or your topping of choice! I like
+        Lingonberry jam.
+      </li>
     </ol>
   </body>
 </html>
